Closed Bug 420640 Opened 16 years ago Closed 16 years ago

don't remove native menu items from parent unless we're sure they are in the parent

Categories

(Core :: Widget: Cocoa, defect, P2)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
Trying to remove a native Cocoa menu item from a menu that it isn't in will result in an internal inconsistency exception being thrown. I ran into this and crashed while stress-testing native menus in Thunderbird. Easy to find and fix thanks to our cocoa exception handling code!
Flags: blocking1.9+
Attachment #306945 - Flags: review?(smichaud)
Priority: -- → P2
Comment on attachment 306945 [details] [diff] [review]
fix v1.0

Looks fine to me.
Attachment #306945 - Flags: review?(smichaud) → review+
Attachment #306945 - Flags: superreview?(roc)
Attachment #306945 - Flags: superreview?(roc) → superreview+
Attachment #306945 - Flags: approval1.9?
Attachment #306945 - Flags: approval1.9?
landed on trunk
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: